--- a/tables.html
+++ b/tables.html
@@ -16,11 +16,9 @@
         <br>
   
         <div class="text-center">
-          </a>
-          <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
-
-          <a href="/index.html"> <button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button> </a>
-        </div>
+                <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+                <a href="/"><button class="btn btn-lg btn-primary"><span class="fa fa-credit-card"></span> Home</button></a>
+              </div>
   
       </div>
       <div class="row">
